# flake-templates

./: LICENSE  README.md  flake.nix
templates/cpp-starter-kit/: flake.nix
templates/langchain-basics/: flake.nix
templates/maturin-basics/: flake.nix
templates/nixos-config/: flake.nix
templates/nixos-config/machines/my-framework-laptop/: default.nix  hardware-configuration.nix
templates/pnpm-webapp-starter/: README.md  flake.nix
templates/pnpm-webapp-starter/nix/: development.nix
templates/pybind11-starter-kit/: CMakeLists.txt  flake.nix  pyproject.toml  setup.py
templates/pybind11-starter-kit/nix/: default.nix  dev-shell.nix  development.nix  release.nix
templates/python-project/: .gitignore  flake.nix
templates/python-project/hello/: app.py
templates/python-project/nix/: development.nix
templates/torch-basics/: flake.nix
