[build-system]
requires = [
  "scikit-build-core>=0.10",
  "pybind11",
]
build-backend = "scikit_build_core.build"

[project]
name = "starterpp"
version = "1.0.0"
description = "An example nix powered pybind11 starter skeleton"
# readme = "README.md"
requires-python = ">=3.10"
# license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
]
dependencies = ["numpy"]

[project.urls]
"Homepage" = "https://github.com/nixvital/flake-templates/tree/main/templates/pybind11-starter-kit"

[tool.wheel]
exclude = [
  "dist*",
  "tests*",
]

[tool.scikit-build]
cmake.build-type = "Release"

[tool.scikit-build.cmake.define]
STARTERPP_ENABLE_TEST = false
